--- a/cloudbuilder/setup.yaml
+++ b/cloudbuilder/setup.yaml
@@ -1,7 +1,7 @@
 steps:
 # Build New Front-end Container
 - name: 'gcr.io/cloud-builders/docker'
-  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/front-end-image', '~/kube-django-ng/front-end' ]
+  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/front-end-image', '../front-end' ]
 
 # Push updated Front-end Container
 - id: 'Push Front-end image to registry'
@@ -10,21 +10,21 @@ steps:
 
 # Deploy all in the Cloud
 - name: 'gcr.io/cloud-builders/kubectl'
-  args: [ 'apply', '-f', 'cloudbuilder/front-end-deployment.yaml' ]
+  args: [ 'apply', '-f', 'front-end-deployment.yaml' ]
   env:
     - 'CLOUDSDK_COMPUTE_ZONE=${_REGION}'
     - 'CLOUDSDK_CONTAINER_CLUSTER=${_GKE_CLUSTER}'
 
 # Build Django Container
 - name: 'gcr.io/cloud-builders/docker'
-  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/django-image', '~/kube-django-ng/server' ]
+  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/django-image', '../server' ]
 # Push updated Django Container
 - id: 'Push Django image to registry'
   name: 'gcr.io/cloud-builders/docker'
   args: [ 'push', 'gcr.io/$PROJECT_ID/django-image' ]
 # Deploy all in the Cloud
 - name: 'gcr.io/cloud-builders/kubectl'
-  args: [ 'apply', '-f', 'cloudbuilder/django-deployment.yaml' ]
+  args: [ 'apply', '-f', 'django-deployment.yaml' ]
   env:
     - 'CLOUDSDK_COMPUTE_ZONE=${_REGION}'
     - 'CLOUDSDK_CONTAINER_CLUSTER=${_GKE_CLUSTER}'
@@ -32,14 +32,14 @@ steps:
 
   # Build ChatServer Container
 - name: 'gcr.io/cloud-builders/docker'
-  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/chatserver-image', '~/kube-django-ng/chatserver' ]
+  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/chatserver-image', '../chatserver' ]
 # Push updated ChatServer Container
 - id: 'Push ChatServer image to registry'
   name: 'gcr.io/cloud-builders/docker'
   args: [ 'push', 'gcr.io/$PROJECT_ID/chatserver-image' ]
 # Deploy all in the Cloud
 - name: 'gcr.io/cloud-builders/kubectl'
-  args: [ 'apply', '-f', 'cloudbuilder/chatserver-deployment.yaml' ]
+  args: [ 'apply', '-f', 'chatserver-deployment.yaml' ]
   env:
     - 'CLOUDSDK_COMPUTE_ZONE=${_REGION}'
     - 'CLOUDSDK_CONTAINER_CLUSTER=${_GKE_CLUSTER}'
