change the root

--- a/cloudbuilder/setup.yaml
+++ b/cloudbuilder/setup.yaml
@@ -1,7 +1,7 @@
 steps:
 # Build New Front-end Container
 - name: 'gcr.io/cloud-builders/docker'
-  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/front-end-image', './kube-django-ng/front-end' ]
+  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/front-end-image', './front-end' ]
 
 # Push updated Front-end Container
 - id: 'Push Front-end image to registry'
@@ -17,7 +17,7 @@ steps:
 
 # Build Django Container
 - name: 'gcr.io/cloud-builders/docker'
-  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/django-image', './kube-django-ng/server' ]
+  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/django-image', './server' ]
 # Push updated Django Container
 - id: 'Push Django image to registry'
   name: 'gcr.io/cloud-builders/docker'
@@ -32,7 +32,7 @@ steps:
 
   # Build ChatServer Container
 - name: 'gcr.io/cloud-builders/docker'
-  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/chatserver-image', './kube-django-ng/chatserver' ]
+  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/chatserver-image', './chatserver' ]
 # Push updated ChatServer Container
 - id: 'Push ChatServer image to registry'
   name: 'gcr.io/cloud-builders/docker'
