--- a/cloudbuilder/deploy.yaml
+++ b/cloudbuilder/deploy.yaml
@@ -1,19 +1,19 @@
 steps:
 # Deploy all in the Cloud
 - name: 'gcr.io/cloud-builders/kubectl'
-  args: [ 'apply', '-f', './front-end-deployment.yaml' ]
+  args: [ 'apply', '-f', './cloudbuilder/front-end-deployment.yaml' ]
   env:
     - 'CLOUDSDK_COMPUTE_ZONE=${_REGION}'
     - 'CLOUDSDK_CONTAINER_CLUSTER=${_GKE_CLUSTER}'
 
 - name: 'gcr.io/cloud-builders/kubectl'
-  args: [ 'apply', '-f', './django-deployment.yaml' ]
+  args: [ 'apply', '-f', './cloudbuilder/django-deployment.yaml' ]
   env:
     - 'CLOUDSDK_COMPUTE_ZONE=${_REGION}'
     - 'CLOUDSDK_CONTAINER_CLUSTER=${_GKE_CLUSTER}'
 
 - name: 'gcr.io/cloud-builders/kubectl'
-  args: [ 'apply', '-f', './chatserver-deployment.yaml' ]
+  args: [ 'apply', '-f', './cloudbuilder/chatserver-deployment.yaml' ]
   env:
     - 'CLOUDSDK_COMPUTE_ZONE=${_REGION}'
     - 'CLOUDSDK_CONTAINER_CLUSTER=${_GKE_CLUSTER}'
