--- a/chatserver/Dockerfile
+++ b/chatserver/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:latest
+FROM node:10.13.0
 
 LABEL maintainer="Lee Boonstra"
 
@@ -8,7 +8,7 @@ COPY package.json /app
 COPY . /app
 
 RUN npm set progress=false && npm config set depth 0 && npm cache clean --force
-RUN npm install grpc --build-from-source
+RUN npm install grpc --unsafe-perm
 RUN npm install pm2 -g
 RUN npm install
 RUN npm run build
