--- a/cloudbuilder/django.yaml
+++ b/cloudbuilder/django.yaml
@@ -8,19 +8,5 @@ steps:
   name: 'gcr.io/cloud-builders/docker'
   args: [ 'push', 'gcr.io/$PROJECT_ID/django-image' ]
   env:
-    - 'CLOUDSDK_COMPUTE_ZONE=europe-west1-c'
-    - 'CLOUDSDK_CONTAINER_CLUSTER=futurebank'
-
-# Delete Existing Deployment 
-- name: 'gcr.io/cloud-builders/kubectl'
-  args: [ 'delete', 'deployment', 'django' ]
-  env:
-    - 'CLOUDSDK_COMPUTE_ZONE=europe-west1-c'
-    - 'CLOUDSDK_CONTAINER_CLUSTER=futurebank'
-    
-# Deploy all in the Cloud
-- name: 'gcr.io/cloud-builders/kubectl'
-  args: [ 'apply', '-f', 'cloudbuilder/django-deployment.yaml' ]
-  env:
-    - 'CLOUDSDK_COMPUTE_ZONE=europe-west1-c'
-    - 'CLOUDSDK_CONTAINER_CLUSTER=futurebank'
+    - 'CLOUDSDK_COMPUTE_ZONE=${_REGION}'
+    - 'CLOUDSDK_CONTAINER_CLUSTER=${_GKE_CLUSTER}'
