--- a/cloudbuilder/front-end.yaml
+++ b/cloudbuilder/front-end.yaml
@@ -8,19 +8,6 @@ steps:
   name: 'gcr.io/cloud-builders/docker'
   args: [ 'push', 'gcr.io/$PROJECT_ID/front-end-image' ]
   env:
-    - 'CLOUDSDK_COMPUTE_ZONE=europe-west1-c'
-    - 'CLOUDSDK_CONTAINER_CLUSTER=futurebank'
-    
-# Delete Existing Deployment 
-# - name: 'gcr.io/cloud-builders/kubectl'
-#  args: [ 'delete', 'deployment', 'front-end' ]
-#  env:
-#    - 'CLOUDSDK_COMPUTE_ZONE=europe-west1-c'
-#    - 'CLOUDSDK_CONTAINER_CLUSTER=futurebank'
+    - 'CLOUDSDK_COMPUTE_ZONE=${_REGION}'
+    - 'CLOUDSDK_CONTAINER_CLUSTER=${_GKE_CLUSTER}'
 
-# Deploy all in the Cloud
-- name: 'gcr.io/cloud-builders/kubectl'
-  args: [ 'apply', '-f', 'cloudbuilder/front-end-deployment.yaml', 'overwrite', 'true' ]
-  env:
-    - 'CLOUDSDK_COMPUTE_ZONE=europe-west1-c'
-    - 'CLOUDSDK_CONTAINER_CLUSTER=futurebank'
