--- a/cloudbuilder/front-end-deployment.yaml
+++ b/cloudbuilder/front-end-deployment.yaml
@@ -17,7 +17,6 @@ spec:
     spec:
       containers:
       - name: "front-end-image"
-        image: "gcr.io/PROJECT_ID/front-end-image:latest"
+        image: "gcr.io/${PROJECT_ID}/front-end-image:latest"
         ports:
-        - containerPort: 4200 
-        args: ["$(PROJECT_ID)"]
+        - containerPort: 4200
